test/Fail/NonUniqueInstance1.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _8 : NonZero n
  Candidates
    y : NonZero n
    x : NonZero n
    (stuck)

NonUniqueInstance1.agda:16.10-17: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  NonUniqueInstance1.agda:16.10-17
